BWIN-18: Prepare change of ini file format to properties-style.